# ytm2lfm

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
src/: cli.py
src/ytm2lfm/: cli.py  config.py  database.py  lastfm.py  logger.py  scrobbler.py  utils.py  ytmusic.py
tests/: test_database.py  test_utils.py
