[project]
name = "ytm2lfm"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "pydantic-settings",
    "pylast",
    "ytmusicapi",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120 

[tool.ruff.lint]
select = ["E501", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"
disable_error_code = "import-untyped"


[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]